--- a/index-fr.html
+++ b/index-fr.html
@@ -142,11 +142,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/images/img/portfolio/4.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/images/img/portfolio/uncharted/Uncharted.jpg" alt="uncharted image" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-heading">Uncharted</div>
+                                <div class="portfolio-caption-subheading text-muted">L'histoire de la licence !</div>
                             </div>
                         </div>
                     </div>
@@ -525,30 +525,88 @@
         <!-- Portfolio item 4 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
-                <div class="modal-content">
+                <div class="modal-content", style="background-image: url('/assets/images/img/portfolio/uncharted/unch-bg.jpg');">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/images/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8">
+                            <div class="col-lg-20">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/images/img/portfolio/4.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Lines
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Branding
-                                        </li>
-                                    </ul>
+                                    <div class="header">
+                                        <h2 class="text-uppercase">Uncharted</h2>
+                                        <ul class="list-unstyled">
+                                            <li>
+                                                <strong>Genre :</strong>
+                                                Action-Adventure
+                                            </li>
+                                            <li>
+                                                <strong>Studio :</strong>
+                                                Naughty Dog
+                                            </li>
+                                            <li>
+                                                <strong>Editeur :</strong>
+                                                Sony Interactive Entertainment
+                                            </li>
+                                            <li>
+                                                <strong>Opus :</strong>
+                                                6 games & 1 movie
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="d-flex justify-content-around">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div id="carousel" class="carousel-uncharted" data-bs-ride="carousel">
+                                                    <div class="carousel-inner">
+                                                        <div class="carousel-item active">
+                                                            <img class="d-block w-100" src="/assets/images/img/portfolio/uncharted/unch1.jpg" alt="First slide">
+                                                        </div>
+                                                        <div class="carousel-item">
+                                                            <img class="d-block w-100" src="/assets/images/img/portfolio/uncharted/unch2.jpg" alt="Second slide">
+                                                        </div>
+                                                        <div class="carousel-item">
+                                                            <img class="d-block w-100" src="/assets/images/img/portfolio/uncharted/unch3.jpg" alt="Third slide">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <h4>Synopsis</h4>
+                                                <p>
+                                                    Nous suivrons les aventures de Nathan Drake qui part à la recherche du trésor perdu de son ancêtre Sir Francis Drake. 
+                                                    Ses voyages nous mèneront à visiter plusieurs pays aux paysages à couper le souffle. 
+                                                    Combat armé comme à mains nues, puzzle, amour et malchance de notre héros, vous allez adorer suivre ses aventures.<br>
+                                                    Un film à était réalisé en 2023 avec Tom Holland dans le rôle de Nathan Drake.
+                                                </p>
+                                                <h4>Nom & date de sortie (sans les pack édition)</h4>
+                                                <ul class="list-unstyled">
+                                                    <li>
+                                                        Uncharted : Drake Fortun's (2007)
+                                                    </li>
+                                                    <li>
+                                                        Uncharted 2 : Among Thieves (2009)
+                                                    </li>
+                                                    <li>
+                                                        Uncharted 3 : Drake's Deception (2011)
+                                                    </li>
+                                                    <li>
+                                                        Uncharted : Golden Abyss (2011)
+                                                    </li>
+                                                    <li>
+                                                        Uncharted 4 : A Thief's End (2016)
+                                                    </li>
+                                                    <li>
+                                                        Uncharted : The Lost Legacy (2017)
+                                                    </li>
+                                                </ul>
+                                                <h4>Plateforme</h4>
+                                                <p>PS3 / PS4 / PS5 / PS Vita / PC</p>
+                                            </div>
+                                        </div> 
+                                    </div>                              
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
