--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/images/img/portfolio/Uncharted.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/images/img/portfolio/uncharted/Uncharted.jpg" alt="uncharted image" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Uncharted</div>
-                                <div class="portfolio-caption-subheading text-muted">The story of this license</div>
+                                <div class="portfolio-caption-subheading text-muted">Story of the licence !</div>
                             </div>
                         </div>
                     </div>
@@ -525,60 +525,86 @@
         <!-- Portfolio item 4 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
-                <div class="modal-content">
+                <div class="modal-content", style="background-image: url('/assets/images/img/portfolio/uncharted/unch-bg.jpg');">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/images/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8">
+                            <div class="col-lg-20">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Uncharted</h2>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Genre :</strong>
-                                            Action-Adventure
-                                        </li>
-                                        <li>
-                                            <strong>Studio :</strong>
-                                            Naughty Dog 
-                                        </li>
-                                        <li>
-                                            <strong>Editeur :</strong>
-                                            Sony Interactive Enterntainement
-                                        </li>
-                                    </ul>
-                                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                                        <div class="carousel-indicators">
-                                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                                        </div>
-                                        <div class="carousel-inner">
-                                          <div class="carousel-item active">
-                                            <img src="/assets/images/img/portfolio/uncharted/unch1.jpg" class="d-block w-100" alt="...">
-                                          </div>
-                                          <div class="carousel-item">
-                                            <img src="/assets/images/img/portfolio/uncharted/unch2.jpg" class="d-block w-100" alt="...">
-                                          </div>
-                                          <div class="carousel-item">
-                                            <img src="/assets/images/img/portfolio/uncharted/unch3.jpg" class="d-block w-100" alt="...">
-                                          </div>
-                                          <div class="carousel-item">
-                                            <img src="/assets/images/img/portfolio/uncharted/unch4.jpg" class="d-block w-100" alt="...">
-                                          </div>
-                                        </div>
-                                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                          <span class="visually-hidden">Previous</span>
-                                        </button>
-                                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                          <span class="visually-hidden">Next</span>
-                                        </button>
-                                      </div>
+                                    <div class="header">
+                                        <h2 class="text-uppercase">Uncharted</h2>
+                                        <ul class="list-unstyled">
+                                            <li>
+                                                <strong>Type :</strong>
+                                                Action-Adventure
+                                            </li>
+                                            <li>
+                                                <strong>Studio :</strong>
+                                                Naughty Dog
+                                            </li>
+                                            <li>
+                                                <strong>Publisher :</strong>
+                                                Sony Interactive Entertainment
+                                            </li>
+                                            <li>
+                                                <strong>Opus :</strong>
+                                                6 games & 1 movie
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="d-flex justify-content-around">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div id="carousel" class="carousel-uncharted" data-bs-ride="carousel">
+                                                    <div class="carousel-inner">
+                                                        <div class="carousel-item active">
+                                                            <img class="d-block w-100" src="/assets/images/img/portfolio/uncharted/unch1.jpg" alt="First slide">
+                                                        </div>
+                                                        <div class="carousel-item">
+                                                            <img class="d-block w-100" src="/assets/images/img/portfolio/uncharted/unch2.jpg" alt="Second slide">
+                                                        </div>
+                                                        <div class="carousel-item">
+                                                            <img class="d-block w-100" src="/assets/images/img/portfolio/uncharted/unch3.jpg" alt="Third slide">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <h4>Story telling</h4>
+                                                <p>We will follow the adventures of Nathan Drake who goes in search of the lost treasure of his ancestor Sir Francis Drake.
+                                                    His travels will lead us to visit several countries with some breathtaking landscapes.
+                                                    Armed combat as with bare hands, puzzle, love and bad luck of our hero, you will love to follow his adventures.<br>
+                                                    A film was made in 2023 with Tom Holland as Nathan Drake.</p>
+                                                <h4>Name & Realase Date (without edition pack)</h4>
+                                                <ul class="list-unstyled">
+                                                    <li>
+                                                        Uncharted : Drake Fortun's (2007)
+                                                    </li>
+                                                    <li>
+                                                        Uncharted 2 : Among Thieves (2009)
+                                                    </li>
+                                                    <li>
+                                                        Uncharted 3 : Drake's Deception (2011)
+                                                    </li>
+                                                    <li>
+                                                        Uncharted : Golden Abyss (2011)
+                                                    </li>
+                                                    <li>
+                                                        Uncharted 4 : A Thief's End (2016)
+                                                    </li>
+                                                    <li>
+                                                        Uncharted : The Lost Legacy (2017)
+                                                    </li>
+                                                </ul>
+                                                <h4>Plateform</h4>
+                                                <p>PS3 / PS4 / PS5 / PS Vita / PC</p>
+                                            </div>
+                                        </div> 
+                                    </div>                              
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Close
                                     </button>
                                 </div>
                             </div>
