--- a/index-fr.html
+++ b/index-fr.html
@@ -252,52 +252,48 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Notre incroyable équipe</h2>
-                    <h3 class="section-subheading text-muted">Pour créer de superbe produit, vous avez juste besoin de la meilleure équipe.</h3>
+                    <h3 class="section-subheading text-muted">Pour créer de superbes produits, vous avez besoin de la meilleure équipe.</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/images/img/team/1.jpg" alt="..." />
-                            <h4>Parveen Anand</h4>
-                            <p class="text-muted">Lead Designer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <img class="mx-auto rounded-circle" src="assets/images/img/team/alexis.png" alt="Photo alexis" />
+                            <h4>Crozier Alexis</h4>
+                            <p class="text-muted">Chef de projet / Développeur full stack</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/AlexisCro" target="_blank" aria-label="Parveen Anand Facebook Profile"><i class="fa-brands fa-github"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/crozier-alexis-5b164b106/" target="_blank" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/images/img/team/1.jpg" alt="..." />
-                            <h4>Parveen Anand</h4>
-                            <p class="text-muted">Lead Designer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <img class="mx-auto rounded-circle" src="assets/images/img/team/clement.png" alt="photo clément" />
+                            <h4>Berard Clément</h4>
+                            <p class="text-muted">Développeur full stack</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/clemberard" target="_blank" aria-label="Parveen Anand Facebook Profile"><i class="fa-brands fa-github"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/clement-berard42/" target="_blank" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/images/img/team/2.jpg" alt="..." />
-                            <h4>Diana Petersen</h4>
-                            <p class="text-muted">Lead Marketer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <img class="mx-auto rounded-circle" src="assets/images/img/team/mateo.png" alt="photo mateo" />
+                            <h4>Deport Matéo</h4>
+                            <p class="text-muted">Développeur back</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/mdeport" target="_blank" aria-label="Parveen Anand Facebook Profile"><i class="fa-brands fa-github"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/mat%C3%A9o-deport/" target="_blank" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/images/img/team/3.jpg" alt="..." />
-                            <h4>Larry Parker</h4>
-                            <p class="text-muted">Lead Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <img class="mx-auto rounded-circle" src="assets/images/img/team/gaultier.png" alt="photo gaultier" />
+                            <h4>Gelay Gaultier</h4>
+                            <p class="text-muted">Développeur front</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/WonderMad51" target="_blank" aria-label="Parveen Anand Facebook Profile"><i class="fa-brands fa-github"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/ggelhay/" target="_blank" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Passionate at your service</p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Une équipe passionnée, unie par la détermination et l'amour de son domaine, travaillant avec énergie et créativité pour atteindre des objectifs communs</p></div>
                 </div>
             </div>
         </section>
