--- a/index-fr.html
+++ b/index-fr.html
@@ -806,7 +806,7 @@
                                         </div>
                                         <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                             <i class="fas fa-xmark me-1"></i>
-                                            Close Project
+                                            Fermer la fenêtre
                                         </button>
                                     </div>
                                     </div>
