--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/images/img/portfolio/image-csgo-1.png" alt="..." />
+                                <img class="img-fluid" src="assets/images/img/portfolio/scgo-project/image-csgo-1.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Counter-Strike: Global Offensive</div>
-                                <div class="portfolio-caption-subheading text-muted">jeux vidéo de tir</div>
+                                <div class="portfolio-caption-subheading text-muted">shooting video games</div>
                             </div>
                         </div>
                     </div>
@@ -563,23 +563,77 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Counter-Strike: Global Offensive</h2>
-                                    <p class="item-intro text-muted">jeux vidéo de tir</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/images/img/portfolio/image-csgo-3.jpeg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Finish
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Identity
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Close Project
-                                    </button>
+                                    <p class="item-intro text-muted">shooting video games</p>
+                                    <div class="container text-center">
+                                        <div class="row">
+                                            <div class="col">
+                                                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                                                    <div class="carousel-inner">
+                                                        <div class="carousel-item active" data-bs-interval="4000">
+                                                            <img src="assets/images/img/portfolio/scgo-project/image-csgo-3.jpeg" class="d-block w-100"
+                                                                alt="image">
+                                                        </div>
+                                                        <div class="carousel-item" data-bs-interval="4000">
+                                                            <img src="assets/images/img/portfolio/scgo-project/image-csgo2.jpeg" class="d-block w-100"
+                                                                alt="image">
+                                                        </div>
+                                                        <div class="carousel-item" data-bs-interval="4000">
+                                                            <img src="assets/images/img/portfolio/scgo-project/image-csgo5.png" class="d-block w-100"
+                                                                alt="image">
+                                                        </div>
+                                                        <div class="carousel-item" data-bs-interval="4000">
+                                                            <img src="assets/images/img/portfolio/scgo-project/image-csgo-6.png" class="d-block w-100"
+                                                                alt="image">
+                                                        </div>
+                                                    </div>
+                                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                                                        data-bs-slide="prev">
+                                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                        <span class="visually-hidden">Previous</span>
+                                                    </button>
+                                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                                                        data-bs-slide="next">
+                                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                        <span class="visually-hidden">Next</span>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col">
+                                                <p>Counter-Strike: Global Offensive is a first-person shooter game in which two teams compete online, each
+                                                    belonging to a
+                                                    faction, either terrorists or counter-terrorists. Since late 2018, the game has been completely free and
+                                                    includes in-app
+                                                    purchases.</p>
+                                                <ul class="list-group list-group-flush">
+                                                    <li class="list-group-item">
+                                                        <strong>Objective :</strong>
+                                                        <ul class="list-inline">
+                                                            <li>The objective is to be the last survivor to win individually or to secure victory for your
+                                                                duo.</li>
+                                                        </ul>
+                                                    </li>
+                                                    <li class="list-group-item">
+                                                        <strong>Which platforms ?</strong>
+                                                        <ul class="list-inline">
+                                                            <li>PC with Steam</li>
+                                                            </ul>
+                                                            </li>
+                                                    <li class="list-group-item">
+                                                        <strong>If you like shooting and strategy games, this game is for you !!!<br>
+                                                    
+                                                        </strong>
+                                                        <br>
+                                                    </li>
+                                                    </ul>
+                                            </div>
+                                            </div>
+                                            </div>
+                                        <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                            <i class="fas fa-xmark me-1"></i>
+                                            Close Project
+                                        </button>
                                 </div>
                             </div>
                         </div>
