--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
         <!-- Portfolio item 4 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
-                <div class="modal-content", style="background-image: url('/assets/images/img/portfolio/uncharted/unch-bg.jpg');">
+                <div class="modal-content" style="background-image: url('/assets/images/img/portfolio/uncharted/unch-bg.jpg');">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/images/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
